unpackaged/main/default/objects/Opportunity/fields/CC_Score__c.field-meta.xml
<CustomField>
    <fullName>CC_Score__c</fullName>
    <label>CC Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excellent(740+)</fullName>
            </value>
            <value>
                <fullName>Good(700+)</fullName>
            </value>
            <value>
                <fullName>Average(640+)</fullName>
            </value>
            <value>
                <fullName>Need Some work (639&amp;below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>