unpackaged/main/default/objects/Opportunity/fields/Co_lateral_Documents__c.field-meta.xml
<CustomField>
    <fullName>Co_lateral_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Co-lateral Documents</label>
    <type>Checkbox</type>
</CustomField>