unpackaged/main/default/objects/Opportunity/fields/Fixed_rate_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Fixed_rate_of_Interest__c</fullName>
    <label>Fixed rate of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tenure_in_years__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>2.875</fullName>
            </value>
            <value>
                <fullName>2.72</fullName>
            </value>
            <value>
                <fullName>2.625</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>