unpackaged/main/default/objects/Opportunity/fields/Guarantor_DOB__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_DOB__c</fullName>
    <label>Guarantor DOB</label>
    <type>Date</type>
</CustomField>