unpackaged/main/default/objects/Opportunity/fields/Guarantor_Documents_submitted__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Documents_submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guarantor Documents submitted</label>
    <type>Checkbox</type>
</CustomField>