unpackaged/main/default/objects/Opportunity/fields/Guarantor_Email__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Email__c</fullName>
    <label>Guarantor Email</label>
    <length>18</length>
    <type>Text</type>
</CustomField>