unpackaged/main/default/objects/Opportunity/fields/Guarantor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_First_Name__c</fullName>
    <label>Guarantor First Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>