unpackaged/main/default/objects/Opportunity/fields/Guarantor_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Mobile__c</fullName>
    <label>Guarantor Mobile</label>
    <type>Phone</type>
</CustomField>