unpackaged/main/default/objects/Opportunity/fields/Guarantor_SSN__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_SSN__c</fullName>
    <label>Guarantor SSN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>