unpackaged/main/default/objects/Opportunity/fields/Other_Mortgage_Loans__c.field-meta.xml
<CustomField>
    <fullName>Other_Mortgage_Loans__c</fullName>
    <label>Other Mortgage Loans</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>