unpackaged/main/default/objects/Opportunity/fields/Paycheck_stubs_from_last_30_days__c.field-meta.xml
<CustomField>
    <fullName>Paycheck_stubs_from_last_30_days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paycheck stubs from last 30 days.</label>
    <type>Checkbox</type>
</CustomField>