unpackaged/main/default/objects/Opportunity/fields/Payments_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payments_Frequency__c</fullName>
    <label>Payments Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 days</fullName>
            </value>
            <value>
                <fullName>30 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>