unpackaged/main/default/objects/Opportunity/fields/Process_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Process_Documentation__c</fullName>
    <label>Process Documentation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partially received</fullName>
            </value>
            <value>
                <fullName>Fully received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>