unpackaged/main/default/objects/Opportunity/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Process_Documentation__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>All documents submitted</fullName>
            </value>
            <value>
                <fullName>Further documents are required</fullName>
            </value>
            <value>
                <fullName>Few documents are not correct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>