unpackaged/main/default/objects/Opportunity/fields/Tenure_in_years__c.field-meta.xml
<CustomField>
    <fullName>Tenure_in_years__c</fullName>
    <label>Tenure(in years)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>