unpackaged/main/default/objects/Opportunity/fields/W2_or_I_9_forms_from_past_2_years__c.field-meta.xml
<CustomField>
    <fullName>W2_or_I_9_forms_from_past_2_years__c</fullName>
    <defaultValue>false</defaultValue>
    <label>W2 or I-9 forms from past 2 years</label>
    <type>Checkbox</type>
</CustomField>